create github action

--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,3 @@
-title: にゃあ
-description: >-
-  概要
-copyright:
-  year: 2021
-  name: nakasu
+# _config.yml
 
-author:
-  name:  nakasu
-  email: unkohacker@gmail.com
-
-
-## 変換対象から除外
-exclude:
-  - .gitignore
-  - bs-config.js
-  - Gemfile
-  - Gemfile.lock
-  - Makefile
-  - Procfile
-  - REAADME.md
-
-plugins:
-  - jekyll-tidy
+title: "Jekyll Actions Demo"
